fixed overflow on page. Made the modal a better size.

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,15 @@
   --darkColor: #00539c;
 }
 
+html, body {
+  overflow: hidden;
+}
+
+/* LEAVE THIS COMMENTED UNLESS HAVING ISSUES WITH FORMATTING 
+* {
+  outline: 1px solid red;
+} 
+*/
 @font-face {
   font-family: "roboto-headers";
   src: url("./Roboto-Regular.ttf") format("truetype");
@@ -159,7 +168,7 @@ input[type="checkbox"] {
   transform: translate(-50%, -50%);
   background-color: white;
   padding: 1rem 1.5rem;
-  width: 24rem;
+  width: 80%;
   border-radius: 0.5rem;
 }
 .close-button {
